fix letter-spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -86,19 +86,17 @@
   font: 700 100px/1.15 'Raleway', sans-serif;
   color: #fff;
   text-transform: uppercase;
-  letter-spacing: 27px;
+  letter-spacing: 30px;
   z-index: 1;
 }
 
 .aligned-text_center {
   align-self: center;
   padding: 0 20px 0 0;
-  letter-spacing: 28px;
 }
 
 .aligned-text_right {
   align-self: flex-end;
-  letter-spacing: 26px;
 }
 
 .aligned-letter {
